--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Get some character names</h1>
-    <p>created by <a href="https://github.com/nyatalieeee" target="_blank">natalie</a> in like an hour or two</p>
+    <p>created by <a href="https://github.com/Nyatalieeee" target="_blank">natalie</a> in like an hour or two</p>
 
     <hr />
 
@@ -20,6 +20,7 @@
             <p id="agreement">By clicking this button you agree to being a cheater (/j)</p>
             <button id="name_button">Generate names!</button>
         </div>
+        <h2 id="loading"></h2>
         <table id="table">
             <tr id="table_header">
                 <th>Character number</th>
@@ -27,7 +28,6 @@
                 <th>Last name</th>
             </tr>
         </table>
-        <h2 id="loading"></h2>
     </section>
 
     <script type="module" src="./index.js"></script>
