--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </table>
     </section>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./lib/index.js"></script>
 </body>
 
 </html>
