--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         <h2 id="loading"></h2>
         <table id="table">
             <tr id="table_header">
-                <th>Character number</th>
+                <th>Character index</th>
                 <th>First name</th>
                 <th>Last name</th>
             </tr>
         </table>
+
+        <h2 id="error"></h2>
+        <h3 id="error-contact"></h3>
     </section>
 
     <script type="module" src="./lib/index.js"></script>
