--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Get some character names</h1>
-    <p>created by <a href="https://github.com/Nyatalieeee" target="_blank">natalie</a> in like an hour or two</p>
+    <p>created by <a href="https://github.com/Meowcelinee" target="_blank">marceline</a> in like an hour or two</p>
 
     <hr />
 
